--- a/gitlab/.gitlab-ci.yml
+++ b/gitlab/.gitlab-ci.yml
@@ -13,16 +13,16 @@
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
-image: node:17.7
 
 stages:          # List of stages for jobs, and their order of execution
   - verify
 
 verify-commit-job:       # This job runs in the build stage, which runs first.
+  image: node:17.7
   tags:
     - local
   stage: verify
   script:
     - cd pureauth_job/
     - npm install
-    - git show --pretty=raw -s -$COMMITS_CHECK_COUNT | node verification.js
+    - git show --pretty=raw -s -$COMMITS_CHECK_COUNT | node verification.js $CI_COMMIT_BRANCH $CI_PROJECT_NAME
